<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher" />

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:id="@+id/label_FirstName"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/firstname" />-->

            <!--<EditText-->
                <!--android:id="@+id/etxt_firstname"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="3" />-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:id="@+id/label_LastName"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/lastname" />-->

            <!--<EditText-->
                <!--android:id="@+id/etxt_lastname"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="3"-->
                <!--android:inputType="textCapWords" />-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:id="@+id/label_password"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/password" />-->

            <!--<EditText-->
                <!--android:id="@+id/etxt_password"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="3"-->
                <!--android:inputType="textPassword" />-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:id="@+id/label_password"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/password" />-->

            <!--<EditText-->
                <!--android:id="@+id/etxt_password"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="3"-->
                <!--android:inputType="textPassword" />-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:id="@+id/label_password"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/password" />-->

            <!--<EditText-->
                <!--android:id="@+id/etxt_password"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="3"-->
                <!--android:inputType="textPassword" />-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:id="@+id/label_password"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/password" />-->

            <!--<EditText-->
                <!--android:id="@+id/etxt_password"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="3"-->
                <!--android:inputType="textPassword" />-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:id="@+id/label_password"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/password" />-->

            <!--<EditText-->
                <!--android:id="@+id/etxt_password"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="3"-->
                <!--android:inputType="textPassword" />-->
        <!--</LinearLayout>-->
        <EditText
            android:id="@+id/etxt_firstName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/hint_firstname"
            android:layout_weight="3"/>
        <EditText
            android:id="@+id/etxt_lastName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/hint_lastname"
            android:layout_weight="3"/>
        <EditText
            android:id="@+id/etxt_username"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/hint_username"
            android:layout_weight="3"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_dateofbirth"/>
        <DatePicker
            android:id="@+id/dateofbirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_sex"/>

        <EditText
            android:id="@+id/etxt_sex"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/hint_sex"
            android:layout_weight="3"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_address"/>
        <EditText
            android:id="@+id/etxt_streetLine1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/hint_streetline1"
            android:layout_weight="3"/>
        <EditText
            android:id="@+id/etxt_streetLine2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/hint_streetline2"
            android:layout_weight="3"/>
        <EditText
            android:id="@+id/etxt_state"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/hint_state"
            android:layout_weight="3"/>
        <EditText
            android:id="@+id/etxt_postcode"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/hint_postcode"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_relationshipStatus"/>

        <EditText
            android:id="@+id/etxt_relationshipStatus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_languagesSpoken"/>

        <EditText
            android:id="@+id/etxt_languagesSpoken"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>
    </LinearLayout>
</ScrollView>